fix: ajustes en validaciones de login y registro